<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="@drawable/android_background_gameactivity"
    >
  	
  	<Button
  	    android:id="@+id/exitBtn"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_below="@+id/playBtn"
  	    android:layout_centerHorizontal="true"
  	    android:text="@string/abortTxt"
  	    android:minHeight="30dp"
  	    android:minWidth="80dp"
  	    />

  	<Button
  	    android:id="@+id/helpBtn"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_below="@+id/exitBtn"
  	    android:layout_centerHorizontal="true"
  	    android:text="@string/ruleTxt"
  	    android:minHeight="30dp"
  	    android:minWidth="105dp"
  	    />

  	<Button
  	    android:id="@+id/langBtn"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_below="@+id/helpBtn"
  	    android:layout_centerHorizontal="true"
  	    android:text="@string/language"
  	    android:minHeight="30dp"
  	    android:minWidth="80dp" />
  	
  
  	
  	<Spinner
  	    android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/languages"
      	android:gravity="center" 
      	android:paddingTop="25sp" 
      	android:visibility="gone"
  	    />

  	<Button
  	    android:id="@+id/playBtn"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignParentTop="true"
  	    android:layout_centerHorizontal="true"
  	    android:layout_marginTop="85dp"
  	    android:text="@string/playTxt" 
  	    android:minHeight="30dp"
  	    android:minWidth="100dp"/>

</RelativeLayout>