<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android_background_gameactivity"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <RelativeLayout
        android:layout_width="288dp"
        android:layout_height="197dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:paddingTop="15dp" >
   
            <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="10dp"
            android:paddingTop="50dp"
             />

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="46dp"
            android:paddingTop="80dp"
            android:src="@drawable/android_head" />

             <ImageView
            android:id="@+id/body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="42dp"
            android:paddingTop="90dp"
            android:src="@drawable/android_body" />
            
             <ImageView
            android:id="@+id/arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="24dp"
            android:paddingTop="105dp"
            android:src="@drawable/android_leftarm" />
            
            
       		 <ImageView
            android:id="@+id/arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="82dp"
            android:paddingTop="75dp"
            android:src="@drawable/android_rightarm" />
             
                <ImageView
            android:id="@+id/leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:contentDescription="@string/leg"
            android:paddingLeft="60dp"
            android:paddingTop="145dp"
            android:src="@drawable/android_leftleg" />

             <ImageView          
            android:id="@+id/leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="88dp"
            android:paddingTop="133dp"
            android:src="@drawable/android_rightleg" />

             <TextView
                 android:id="@+id/txtExample"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
             
            
                 android:layout_marginTop="190dp"
                 android:paddingLeft="0dp"
                 android:paddingTop="10dp"
                 android:text="@string/Wintext" 
                 android:textColor="#ffffff"/>

    </RelativeLayout>

  	 <LinearLayout
  	     android:id="@+id/word"
  	     android:layout_width="fill_parent"
  	     android:layout_height="wrap_content"
  	     android:layout_marginBottom="0dp"
  	    
  	     android:gravity="center"
  	     android:orientation="horizontal"
  	     android:padding="5dp" >

        </LinearLayout>

        <GridView
            android:id="@+id/letters"
            android:layout_width="fill_parent"
            android:layout_height="130dp"
            android:gravity="bottom"
            android:horizontalSpacing="5dp"
            android:numColumns="10"
            android:padding="5dp"
            android:paddingBottom="0dp"
            android:stackFromBottom="true"
            android:stretchMode="columnWidth" >
        </GridView>
</LinearLayout>